# motorcycle-growth

./: .gitignore  AGENTS.md  README.md  data_catalog.md  pyproject.toml
data/raw/: README.md
scripts/: run_2025_from_scratch.sh
src/motorcycle_growth/: __init__.py  __main__.py  cli.py  cnes_infrastructure_etl.py  dashboard.py  data_catalog.py  logging_utils.py  panel_builder.py  pipeline.py  population_etl.py  raw_data.py  senatran_fleet_etl.py  sih_hospitalization_etl.py  sim_mortality_etl.py
src/motorcycle_growth/config/: __init__.py  paths.py
src/motorcycle_growth/etl_utils/: __init__.py  io.py  schema.py  text.py  validation.py
tests/: test_cnes_infrastructure_etl.py  test_data_catalog.py  test_etl_utils.py  test_panel_builder.py  test_paths.py  test_population_etl.py  test_raw_data.py  test_senatran_fleet_etl.py  test_sih_hospitalization_etl.py  test_sim_mortality_etl.py
